# openapi.yaml
@@ -318,20 +318,9 @@ components:
             txid:
               type: "string"
               description: txid of the transaction where this address is one of the outputs
-            aps:
-              type: object
-              properties:
-                content-available:
-                  type: integer
-                  enum: [1]
             category:
               type: "string"
               default: "TRANSACTION_CATEGORY"
-            interruption-level:
-              type: "string"
-              enum:
-                - "active"
-              default: "active"
 
     PushNotificationOnchainAddressGotUnconfirmedTransaction:
       allOf: # Combines PushNotificationBase and the inline model
@@ -357,20 +346,9 @@ components:
             txid:
               type: "string"
               description: txid of the transaction where this address is one of the outputs
-            aps:
-              type: object
-              properties:
-                content-available:
-                  type: integer
-                  enum: [1]
             category:
               type: "string"
               default: "TRANSACTION_CATEGORY"
-            interruption-level:
-              type: "string"
-              enum:
-                - "active"
-              default: "active"
 
     PushNotificationTxidGotConfirmed:
       allOf: # Combines PushNotificationBase and the inline model
@@ -388,20 +366,9 @@ components:
             txid:
               type: "string"
               description: txid of the transaction that got confirmed
-            aps:
-              type: object
-              properties:
-                content-available:
-                  type: integer
-                  enum: [1]
             category:
               type: "string"
               default: "TRANSACTION_CATEGORY"
-            interruption-level:
-              type: "string"
-              enum:
-                - "time-sensitive"
-              default: "time-sensitive"
 
     PushNotificationMessage:
       allOf: # Combines PushNotificationBase and the inline model
